# eeg-depression-biomarkers

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_exploration.ipynb  01_exploration_clean.ipynb  02_modeling_clean.ipynb
src/: load_data.py
src/modma_depression_eeg/: __init__.py  dataset_builder.py  modma_modeling.py  modma_plotting.py
